# ai-interview-simulator

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EMBEDDING_ARCHITECTURE_ANALYSIS.md  OPERATIONAL_PROJECT_STATUS.md  README.md  RELEASE_NOTES_v1.0.md  app.py  constraints.txt  docker-compose.yml  gradio_app.py  packages.txt  pyproject.toml  requirements.txt  spaces.yml
.cursor/rules/: concise-task-report.mdc
.github/workflows/: ci.yml
app/: main.py
app/application/: interview_runner.py
app/contracts/: feedback_bundle.py  output_contract.py
app/core/: build_info.py  logger.py
app/execution/: execution_router.py  python_executor.py  sandbox.py  sql_executor.py  test_runner.py
app/graph/: builder.py  execution_graph.py  interview_graph.py  replay_graph.py
app/orchestration/: rag_pipeline.py
app/ports/: llm_port.py
app/process_edge/: __init__.py  asgi.py  shutdown.py
app/prompts/: prompt_loader.py  prompt_renderer.py
app/runtime/: interview_runtime.py
app/settings/: constants.py
app/ui/: app.py  app_real.py  gradio_app.py  sample_data_loader.py  state_handlers.py  state_handlers.py.OLD  ui_response.py  ui_router.py  ui_state.py
data/: ai_test_cache.json  curated_engineering_questions.json  sample_questions.csv  sample_questions.json  sample_questions.jsonl
data/longitudinal/: test-id.json
datasets/: dataset_discovery_registry.json  dataset_registry.json  github_corpus_registry.json  sample_questions.json  seed_questions.json
datasets/curated/: tech_interview_handbook.json
docs/: INDEX.md  technical-debt-register.md  tickets.md
docs/architecture/: ARCHITECTURE-INDEX.md  business-context.md  coding-engine.md  configuration.md  evaluation-pipeline.md  feature-flags.md  graph-nodes.md  ingestion.md  question-intelligence.md  runtime-flow.md  sql-engine.md  system_overview.md  ui-architecture.md
docs/decisions/: ADR-TEMPLATE.md  adr-001-intent-vs-last-action.md  adr-002-output-contract-refactor.md  adr-003-state-driven-ui.md  adr-004-hybrid-question-intelligence.md  adr-005-dual-embedding-strategy.md  adr-006-business-context-architecture.md  adr-006-business-context-profiles.md  adr-007-domain-layer-exceptions.md  adr-008-dual-decision-policy.md  adr-009-adaptive-interview-path.md  adr-010-humanizer-follow-up-system.md  adr-011-evaluation-governance.md  adr-012-prompt-centralization.md  adr-013-partial-adapter-registry.md  adr-014-langgraph-sufficiency.md  adr-015-storage-backend-split.md  adr-016-observation-schema-architecture.md  adr-016a-candidate-identity-session-ownership.md  adr-017-observation-store-lifecycle-temporal-semantics.md  adr-018-profilefeature-schema-versioning.md  adr-019-languageconfig-design.md  adr-020-featureengine-architecture.md  adr-021-knowledge-freshness-decay-replay.md  adr-022-knowledge-persistence-session-history.md  adr-023-narrative-intelligence-architecture.md  adr-025-coaching-intelligence-architecture.md  adr-026-replay-snapshot-model.md  adr-027-languageexecutor-abstraction.md  adr-028-language-selection-policy.md  adr-030-study-recommendation-resource-library.md  adr-031-languagepolicy-governance.md  adr-032-candidate-profile-snapshot-strategy.md  adr-033-unified-report-architecture.md  adr-034-longitudinal-profile-ownership.md  adr-035-language-profile-runtime-lifecycle.md  adr-036-language-capability-runtime-ownership.md  adr-037-replay-engine-architecture.md
docs/master-plan/: ARC-01-ARCHITECTURE-CONSTITUTION.md  ARC-02-ARCHITECTURE-REVIEW-CHECKLIST.md  ARC-03-ADR-GOVERNANCE.md  ARCH-REVIEW-M1-1-FOLLOW-UP-ENGINE.md  ARCHITECTURE-GUIDE.md  ENTERPRISE_ENGINEERING_PLAYBOOK.md  INDEX.md  M1-3-ACCEPTANCE-CRITERIA-FOLLOW-UP.md  M1-4-TEST-SPECIFICATION-FOLLOW-UP.md  PLATFORM_ENGINEERING_MANIFEST.md  PRD-V1.1-V1.2.md  TDS-V1.1-V1.2.md  V1.2-ADR-BACKLOG-AUDIT.md  V1.2-ARCHITECTURE-CERTIFICATE.md  V1.2-ARCHITECTURE-RETROSPECTIVE.md  V1.2-DOMAIN-FREEZE.md  V1.2-IMPLEMENTATION-BASELINE.md  (+11 more)
domain/: score_calculator.py
infrastructure/: __init__.py
scripts/: README.md  audit_report_quality.py  audit_sql_questions.py  manual_execution_test.py  test_corpus_diversity_scoring.py  test_corpus_semantic_validation.py  test_coverage_constrained_reranking.py  test_dataset_discovery_registry.py  test_dataset_registry.py  test_difficulty_spike_suppressor.py  test_external_dataset_ingestion.py  test_github_markdown_extraction.py  test_huggingface_ingestion.py  test_hybrid_retrieval.py  test_interview_orchestration.py  test_multiformat_ingestion.py  test_pairwise_semantic_distance.py  test_planner_integrated_retrieval.py  test_question_bank_mapper.py  test_question_quality.py  test_real_corpus_onboarding.py  test_retrieval_preparation.py  test_semantic_cooldown.py  test_semantic_deduplication.py  test_semantic_retrieval.py  test_sql_generator.py  test_technical_filter.py  test_vector_ingestion.py  upload_chroma_artifact.py  v1_audit_run.py
services/: evaluation_aggregator.py  evaluation_engine.py  execution_engine.py  feedback_aggregation.py  feedback_bundle_factory.py  interview_evaluation_service.py  llm_interview_service.py  narrative_service.py  question_bank_loader.py  question_evaluation_service.py  report_builder.py  report_export_service.py  report_insight_builder.py  score_calculator.py  score_calibration_service.py  simple_llm_feedback_service.py
storage/: corpus_utilization_tracker.json
tests/: conftest.py  test_interview_graph_e2e.py
(+2109 files in other folders)
