[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interview-simulator"
version = "1.3.0"
description = "AI-driven interview simulation platform with semantic retrieval, structured evaluation, and executable skill validation."
authors = [
    { name = "Gianmario", email = "your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "ai",
    "langchain",
    "langgraph",
    "rag",
    "interview-simulator",
    "genai",
    "llm",
    "semantic-retrieval"
]
# Runtime dependency pins live solely in requirements.txt / requirements.lock.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "domain*", "infrastructure*", "services*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
    "ignore:pkg_resources is deprecated:UserWarning",
    "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations", "datasets/raw"]

[tool.ruff.lint]
select = [
    "F821",  # undefined-name
    "F811",  # redefined-while-unused
    "F601",  # multi-value-repeated-key-literal
    "E711",  # comparison-to-none
    "E712",  # true-false-comparison
    "W605",  # invalid-escape-sequence
]
ignore = [
    "F821",  # too many false positives in forward-ref annotations and scripts
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

